...
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PDe-ma-lFV">
                                        <rect key="frame" x="0.0" y="0.0" width="292" height="34"/>
                                        <color key="backgroundColor" red="1" green="0.21935321053512236" blue="0.4311283550663334" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" name="Hey-Comic" family="Hey Comic" pointSize="17"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Log In">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="logInAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="84Y-NH-67w"/>
                                        </connections>
                                    </button>
...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zao-8y-N73">
                                <rect key="frame" x="20" y="64" width="45" height="44"/>
                                <fontDescription key="fontDescription" name="Hey-Comic" family="Hey Comic" pointSize="25"/>
                                <state key="normal" title="Exit">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="dismissToLoginView:" destination="Yjv-1d-RIo" eventType="touchUpInside" id="fSM-rQ-Vtg"/>
                                </connections>
                            </button>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LZB-lc-P1z">
                                        <rect key="frame" x="30" y="20" width="24" height="24"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="24" id="3s3-wI-Yk7"/>
                                            <constraint firstAttribute="height" constant="24" id="rec-1X-gjR"/>
                                        </constraints>
                                        <state key="normal" image="more"/>
                                        <connections>
                                            <action selector="menuButton:" destination="Yjv-1d-RIo" eventType="touchUpInside" id="xij-QG-GtR"/>
                                        </connections>
                                    </button>
                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tim-n2-Qrh">
                                        <rect key="frame" x="0.0" y="540" width="414" height="312"/>
...
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="zero" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zTL-gV-WzA">
                                        <rect key="frame" x="156.5" y="230" width="101" height="34"/>
                                        <fontDescription key="fontDescription" name="Hey-Comic" family="Hey Comic" pointSize="17"/>
                                        <state key="normal" title="Set to 0 Like"/>
                                        <connections>
                                            <action selector="setToZeroAction:" destination="Yjv-1d-RIo" eventType="touchUpInside" id="NlK-d7-boq"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
